app/assets/stylesheets/main.css.scss
// Place all the styles related to the main controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
// .gridlet {
//   // display: inline-block;
//   float: left;
//   height: 365px;/*352px;*/
//   width: 365px;/*252px;*/
//   border: 1px solid #ffdffd;
//   text-align: center;
//   // margin-top: 0;
// }

body {
  margin: 0 auto;
}

.flip {
  -webkit-perspective: 800;
  height: 365px;
  width: 252px;
  position: relative;
}

.flip .card.flipped {
  -webkit-transform: rotatey(-180deg);
}

.flip .card {
  width: 100%;
  height: 100%;
  -webkit-transform-style: preserve-3d;
  -webkit-transition: 0.5s;
}

.flip .card .face {
  width: 100%;
  height: 100%;
  position: absolute;
  -webkit-backface-visibility: hidden ;
  z-index: 2;
    // font-family: Georgia;
    // font-size: 3em;
    text-align: center;
    // line-height: 200px;
}
.flip .card .front {
  position: absolute;
  z-index: 1;
  // background: black;
    // color: white;
    cursor: pointer;
}

li.th {
  height: 365px;
  width: 252px;
  margin: 1px;
  text-align: center;
  // overflow: scroll;
  position: relative;
}

input {
  text-align: center;
}

.alert {
  color: orange;
  text-align: center;
  font-weight: bold;
}

.title-twitter {
  position: absolute;
  bottom: 0;
  width: 100%;
  margin: 0 auto;
}

h6 {
  font-size: 12px;
  margin: 5px;
}

